[gd_scene load_steps=7 format=3 uid="uid://dd5m7l8sq2ftd"]

[ext_resource type="Script" path="res://scripts/flaming_ring.gd" id="1_kv1ul"]
[ext_resource type="Texture2D" uid="uid://cicrupadkwrsu" path="res://assets/Art/FlamingRing.png" id="2_6tc6d"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8xdnk"]
radius = 1.33333
height = 22.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yqbkr"]
radius = 1.33333
height = 22.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u50xs"]
size = Vector2(21.6667, 50.3333)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_at2th"]
radius = 25.0
height = 260.667

[node name="FlamingRing" type="Area2D"]
scale = Vector2(2.5, 2.5)
script = ExtResource("1_kv1ul")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5.96046e-08, -27)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_8xdnk")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_6tc6d")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(-0.333333, 27)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_yqbkr")

[node name="RingCenter" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RingCenter"]
position = Vector2(-0.5, 0.166667)
shape = SubResource("RectangleShape2D_u50xs")

[node name="OutsideRing" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutsideRing"]
position = Vector2(-37, -1.33333)
shape = SubResource("CapsuleShape2D_at2th")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="RingCenter" to="." method="_on_ring_center_body_entered"]
[connection signal="body_entered" from="OutsideRing" to="." method="_on_outside_ring_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
